# singer_management

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  celerybeat-schedule  docker-compose.yml  manage.py  pyproject.toml
apps/auth_user/: admin.py  apps.py  models.py  urls.py
apps/auth_user/api/: __init__.py  schemas.py  serializers.py  views.py
apps/management/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  urls.py
apps/management/api/: __init__.py  serializers.py  views.py
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/worker/: start
core/constants/: error_code.py
core/utils/: api_req.py  api_resp.py  base_schema.py  django_base_models.py  services.py
envs/: .env.example
singer_management/: asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
